src/objdetect/objdetect.h

// CascadeClassifier
CvStatus CascadeClassifier_New(CascadeClassifier *rval);
CvStatus CascadeClassifier_NewFromFile(char *filename, CascadeClassifier *rval);
void     CascadeClassifier_Close(CascadeClassifierPtr self);
CvStatus CascadeClassifier_Load(CascadeClassifier self, const char *name, int *rval);
CvStatus CascadeClassifier_DetectMultiScale(CascadeClassifier self, Mat img, VecRect *rval);
CvStatus CascadeClassifier_DetectMultiScaleWithParams(CascadeClassifier self, Mat img, VecRect *objects,
                                                      double scale, int minNeighbors, int flags, Size minSize,
                                                      Size maxSize);
CvStatus CascadeClassifier_DetectMultiScale2(CascadeClassifier self, Mat img, VecRect *objects,
                                             VecInt *numDetections, double scaleFactor, int minNeighbors,
                                             int flags, Size minSize, Size maxSize);
CvStatus CascadeClassifier_DetectMultiScale3(CascadeClassifier self, Mat img, VecRect *objects,
                                             VecInt *rejectLevels, VecDouble *levelWeights,
                                             double scaleFactor, int minNeighbors, int flags, Size minSize,
                                             Size maxSize, bool outputRejectLevels);
CvStatus CascadeClassifier_Empty(CascadeClassifier self, bool *rval);
CvStatus CascadeClassifier_getFeatureType(CascadeClassifier self, int *rval);
CvStatus CascadeClassifier_getOriginalWindowSize(CascadeClassifier self, Size *rval);
CvStatus CascadeClassifier_isOldFormatCascade(CascadeClassifier self, bool *rval);
// FaceDetectorYN
CvStatus FaceDetectorYN_New(const char *model, const char *config, Size input_size, float score_threshold,
                            float nms_threshold, int top_k, int backend_id, int target_id,
                            FaceDetectorYN *rval);
CvStatus FaceDetectorYN_NewFromBuffer(const char *framework, VecUChar buffer, VecUChar buffer_config,
                                      Size input_size, float score_threshold, float nms_threshold, int top_k,
                                      int backend_id, int target_id, FaceDetectorYN *rval);
void     FaceDetectorYN_Close(FaceDetectorYNPtr self);
CvStatus FaceDetectorYN_Detect(FaceDetectorYN self, Mat img, Mat *faces);
CvStatus FaceDetectorYN_SetInputSize(FaceDetectorYN self, Size input_size);
CvStatus FaceDetectorYN_SetNMSThreshold(FaceDetectorYN self, float nms_threshold);
CvStatus FaceDetectorYN_GetInputSize(FaceDetectorYN self, Size *input_size);
CvStatus FaceDetectorYN_GetScoreThreshold(FaceDetectorYN self, float *score_threshold);
CvStatus FaceDetectorYN_GetNMSThreshold(FaceDetectorYN self, float *nms_threshold);
CvStatus FaceDetectorYN_GetTopK(FaceDetectorYN self, int *top_k);