lib/src/g/objdetect.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:opencv_dart/opencv_dart.dart')
library;

import 'dart:ffi' as ffi;
import 'package:opencv_dart/src/g/types.g.dart' as imp1;
import '' as self;

@ffi.Native<ffi.Void Function(CascadeClassifierPtr)>()
external void CascadeClassifier_Close(
  CascadeClassifierPtr self,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        CascadeClassifier, Mat, ffi.Pointer<VecRect>)>()
external ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale(
  CascadeClassifier self,
  Mat img,
  ffi.Pointer<VecRect> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat, ffi.Pointer<VecRect>,
        ffi.Pointer<VecI32>, ffi.Double, ffi.Int, ffi.Int, Size, Size)>()
external ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale2(
  CascadeClassifier self,
  Mat img,
  ffi.Pointer<VecRect> objects,
  ffi.Pointer<VecI32> numDetections,
  double scaleFactor,
  int minNeighbors,
  int flags,
  Size minSize,
  Size maxSize,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat, ffi.Double, ffi.Int,
        ffi.Int, Size, Size, imp1.CvCallback_2)>()
external ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale2_Async(
  CascadeClassifier self,
  Mat img,
  double scaleFactor,
  int minNeighbors,
  int flags,
  Size minSize,
  Size maxSize,
  imp1.CvCallback_2 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        CascadeClassifier,
        Mat,
        ffi.Pointer<VecRect>,
        ffi.Pointer<VecI32>,
        ffi.Pointer<VecF64>,
        ffi.Double,
        ffi.Int,
        ffi.Int,
        Size,
        Size,
        ffi.Bool)>()
external ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale3(
  CascadeClassifier self,
  Mat img,
  ffi.Pointer<VecRect> objects,
  ffi.Pointer<VecI32> rejectLevels,
  ffi.Pointer<VecF64> levelWeights,
  double scaleFactor,
  int minNeighbors,
  int flags,
  Size minSize,
  Size maxSize,
  bool outputRejectLevels,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat, ffi.Double, ffi.Int,
        ffi.Int, Size, Size, ffi.Bool, imp1.CvCallback_3)>()
external ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale3_Async(
  CascadeClassifier self,
  Mat img,
  double scaleFactor,
  int minNeighbors,
  int flags,
  Size minSize,
  Size maxSize,
  bool outputRejectLevels,
  imp1.CvCallback_3 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat, ffi.Pointer<VecRect>,
        ffi.Double, ffi.Int, ffi.Int, Size, Size)>()
external ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScaleWithParams(
  CascadeClassifier self,
  Mat img,
  ffi.Pointer<VecRect> objects,
  double scale,
  int minNeighbors,
  int flags,
  Size minSize,
  Size maxSize,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat, ffi.Double, ffi.Int,
        ffi.Int, Size, Size, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus>
    CascadeClassifier_DetectMultiScaleWithParams_Async(
  CascadeClassifier self,
  Mat img,
  double scale,
  int minNeighbors,
  int flags,
  Size minSize,
  Size maxSize,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale_Async(
  CascadeClassifier self,
  Mat img,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, ffi.Pointer<ffi.Bool>)>()
external ffi.Pointer<CvStatus> CascadeClassifier_Empty(
  CascadeClassifier self,
  ffi.Pointer<ffi.Bool> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> CascadeClassifier_Empty_Async(
  CascadeClassifier self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        CascadeClassifier, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> CascadeClassifier_Load(
  CascadeClassifier self,
  ffi.Pointer<ffi.Char> name,
  ffi.Pointer<ffi.Int> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        CascadeClassifier, ffi.Pointer<ffi.Char>, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> CascadeClassifier_Load_Async(
  CascadeClassifier self,
  ffi.Pointer<ffi.Char> name,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<CascadeClassifier>)>()
external ffi.Pointer<CvStatus> CascadeClassifier_New(
  ffi.Pointer<CascadeClassifier> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<CascadeClassifier>)>()
external ffi.Pointer<CvStatus> CascadeClassifier_NewFromFile(
  ffi.Pointer<ffi.Char> filename,
  ffi.Pointer<CascadeClassifier> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> CascadeClassifier_NewFromFile_Async(
  ffi.Pointer<ffi.Char> filename,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> CascadeClassifier_New_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> CascadeClassifier_getFeatureType(
  CascadeClassifier self,
  ffi.Pointer<ffi.Int> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> CascadeClassifier_getFeatureType_Async(
  CascadeClassifier self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, ffi.Pointer<Size>)>()
external ffi.Pointer<CvStatus> CascadeClassifier_getOriginalWindowSize(
  CascadeClassifier self,
  ffi.Pointer<Size> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> CascadeClassifier_getOriginalWindowSize_Async(
  CascadeClassifier self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, ffi.Pointer<ffi.Bool>)>()
external ffi.Pointer<CvStatus> CascadeClassifier_isOldFormatCascade(
  CascadeClassifier self,
  ffi.Pointer<ffi.Bool> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CascadeClassifier, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> CascadeClassifier_isOldFormatCascade_Async(
  CascadeClassifier self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Void Function(FaceDetectorYNPtr)>()
external void FaceDetectorYN_Close(
  FaceDetectorYNPtr self,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(FaceDetectorYN, Mat, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_Detect(
  FaceDetectorYN self,
  Mat img,
  ffi.Pointer<Mat> faces,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(FaceDetectorYN, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_Detect_Async(
  FaceDetectorYN self,
  Mat img,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(FaceDetectorYN, ffi.Pointer<Size>)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_GetInputSize(
  FaceDetectorYN self,
  ffi.Pointer<Size> input_size,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(FaceDetectorYN, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_GetInputSize_Async(
  FaceDetectorYN self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(FaceDetectorYN, ffi.Pointer<ffi.Float>)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_GetNMSThreshold(
  FaceDetectorYN self,
  ffi.Pointer<ffi.Float> nms_threshold,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(FaceDetectorYN, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_GetNMSThreshold_Async(
  FaceDetectorYN self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(FaceDetectorYN, ffi.Pointer<ffi.Float>)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_GetScoreThreshold(
  FaceDetectorYN self,
  ffi.Pointer<ffi.Float> score_threshold,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(FaceDetectorYN, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_GetScoreThreshold_Async(
  FaceDetectorYN self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(FaceDetectorYN, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_GetTopK(
  FaceDetectorYN self,
  ffi.Pointer<ffi.Int> top_k,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(FaceDetectorYN, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_GetTopK_Async(
  FaceDetectorYN self,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        Size,
        ffi.Float,
        ffi.Float,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Pointer<FaceDetectorYN>)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_New(
  ffi.Pointer<ffi.Char> model,
  ffi.Pointer<ffi.Char> config,
  Size input_size,
  double score_threshold,
  double nms_threshold,
  int top_k,
  int backend_id,
  int target_id,
  ffi.Pointer<FaceDetectorYN> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Pointer<ffi.Char>,
        VecUChar,
        VecUChar,
        Size,
        ffi.Float,
        ffi.Float,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Pointer<FaceDetectorYN>)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_NewFromBuffer(
  ffi.Pointer<ffi.Char> framework,
  VecUChar buffer,
  VecUChar buffer_config,
  Size input_size,
  double score_threshold,
  double nms_threshold,
  int top_k,
  int backend_id,
  int target_id,
  ffi.Pointer<FaceDetectorYN> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Pointer<ffi.Char>,
        VecUChar,
        VecUChar,
        Size,
        ffi.Float,
        ffi.Float,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_NewFromBuffer_Async(
  ffi.Pointer<ffi.Char> framework,
  VecUChar buffer,
  VecUChar buffer_config,
  Size input_size,
  double score_threshold,
  double nms_threshold,
  int top_k,
  int backend_id,
  int target_id,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        Size,
        ffi.Float,
        ffi.Float,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_New_Async(
  ffi.Pointer<ffi.Char> model,
  ffi.Pointer<ffi.Char> config,
  Size input_size,
  double score_threshold,
  double nms_threshold,
  int top_k,
  int backend_id,
  int target_id,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(FaceDetectorYN, Size)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_SetInputSize(
  FaceDetectorYN self,
  Size input_size,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(FaceDetectorYN, Size, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_SetInputSize_Async(
  FaceDetectorYN self,
  Size input_size,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(FaceDetectorYN, ffi.Float)>()
external ffi.Pointer<CvStatus> FaceDetectorYN_SetNMSThreshold(
  FaceDetectorYN self,
  double nms_threshold,
);
